# game-factory

./: .gitignore  README.md
app-of-the-day/: README.md
category/games/2026/02/1738963552-vector-frog-jump-safe/: game.py
category/games/2026/02/20250208-153011-vector-battleship-strategic-fleet/: jira1.txt
category/games/2026/02/20260208-123804-vector-parking-valet-pro/: README.md  appinfo.json  car.py  config.py  game.py  levels.py  main.py  obstacle.py  pyproject.toml
category/games/2026/02/20260208-130000-vector-tumble-tower-collapse/: README.md  appinfo.json  config.py  game.py  jira1.txt  main.py  physics.py  pyproject.toml  tower.py
category/games/2026/02/20260208-172500-vector-snake-grid-survival/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260208-175000-vector-tetris-grid-logic/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml  run.bat
category/games/2026/02/20260208-181000-vector-pinball-gravity-physics/: README.md  appinfo.json  ball.py  config.py  flipper.py  game.py  main.py  pyproject.toml  table.py
category/games/2026/02/20260209-012100-vector-qbert-pyramid-hop/: appinfo.json
category/games/2026/02/20260209-013206-vector-tron-light-cycle-grid/: appinfo.json
category/games/2026/02/20260209-014049-vector-joust-gravity-combat/: README.md  pyproject.toml
category/games/2026/02/20260209-014102-vector-balloon-fight-gravity-float/: appinfo.json
category/games/2026/02/20260209-014331-vector-balloon-fight-gravity/: appinfo.json
category/games/2026/02/20260209-021032-vector-mappy-police-chase/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-021100-vector-excitebike-stunt-jump/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-045050-vector-ice-hockey-classic/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260209-070051-vector-pental-line-connector/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-072051-vector-columns-falling-match/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260209-074052-vector-heian-kyo-alien-trap/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260209-163052-vector-super-mario-bros-underwater-dash/: README.md  appinfo.json  game.py  main.py  pyproject.toml  renderer.py
category/games/2026/02/20260209-164052-vector-frog-river-log-jump/: README.md  appinfo.json  game.py  main.py  pyproject.toml  renderer.py
category/games/2026/02/20260209-170042-vector-zoop-stack-match/: appinfo.json
category/games/2026/02/20260209-171051-vector-qix-area-capture/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260210-073052-vector-super-mario-bros-mushroom-chase/: README.md  appinfo.json  config.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260210-193300-vector-super-mario-bros-infinite-slide/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260210-210852-vector-super-mario-bros-cannon-ball-dodge/: README.md  appinfo.json  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260210-230500-vector-mario-bros-hammer-throw/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json  test_headless.py
category/games/2026/02/20260210-232635-vector-climb-up-donkey-kong-lite/: README.md  appinfo.json  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260211-000317-vector-frogger-crocodile-marsh/: README.md  appinfo.json  main.py  pyproject.toml  run.bat  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260211-002415-vector-galaxian-swarm-attack/: README.md  appinfo.json  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260211-004200-vector-lode-runner-gold-collect/: README.md  appinfo.json  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260211-034800-vector-super-mario-bros-underwater-treasure-hunt/: README.md  appinfo.json  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260211-150830-vector-super-mario-bros-jump-and-dash-pro/: README.md  appinfo.json  config.py  game.py  level.py  main.py  player.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260211-154530-vector-super-mario-bros-paratroopa-stomp/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260213-030212-vector-frogger-logs-and-turtles/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260213-140000-chroma-shift/: README.md  appinfo.json  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260214-062200-vector-snake-rattle-coin-dash/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260214-105224-vector-balloon-pop-puzzle/: README.md  appinfo.json  config.py  game.py  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260214-131654-vector-super-mario-bros-fire-flower-sniping/: README.md  appinfo.json  config.py  game.py  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260214-221055-vector-reversi-othello-logic/: README.md  appinfo.json  config.py  game.py  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
(+195 files in other folders)
