[project]
name = "vector-tetris-grid-logic"
version = "1.0.0"
description = "Clear horizontal lines using strategically falling geometric blocks in this timeless puzzle classic"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.0",
]

[project.scripts]
vector-tetris-grid-logic = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
