[project]
name = "vector-excitebike-stunt-jump"
version = "0.1.0"
description = "Master the rhythm of the track and perform perfect mid-air stunts in this physics-based motocross challenge"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5.0",
]

[project.scripts]
vector-excitebike-stunt-jump = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
