[project]
name = "vector-frog-river-log-jump"
version = "0.1.0"
description = "Cross the treacherous river by hopping on moving logs"
requires-python = ">=3.11,<3.14"
dependencies = ["pygame>=2.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
