[project]
name = "vector-super-mario-bros-mushroom-chase"
version = "0.1.0"
description = "Catch the magic mushroom across moving platforms before it falls into the abyss."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "*.pyc",
    "__pycache__",
]
