[project]
name = "vector-super-mario-bros-infinite-slide"
version = "0.1.0"
description = "Master the physics of momentum in an endless icy platform sliding challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
