[project]
name = "vector-super-mario-bros-cannon-ball-dodge"
version = "0.1.0"
description = "Dodge high-speed cannonballs while staying on moving platforms in this classic timing challenge."
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
