[project]
name = "vector-climb-up-donkey-kong-lite"
version = "0.1.0"
description = "Scale the construction site while dodging rolling barrels in this classic arcade-inspired challenge"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
