[project]
name = "vector-frogger-crocodile-marsh"
version = "0.1.0"
description = "Navigate a treacherous marsh while dodging crocodiles and snapping turtles in this precision timing challenge"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
