[project]
name = "vector-galaxian-swarm-attack"
version = "0.1.0"
description = "Defend the starship against tactical alien swarms in this high-intensity vector shooter."
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
