[project]
name = "vector-lode-runner-gold-collect"
version = "0.1.0"
description = "Navigate platforms and dig traps to collect all gold pieces while avoiding guards."
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
