[project]
name = "vector-super-mario-bros-underwater-treasure-hunt"
version = "0.1.0"
description = "Navigate the deep sea to collect coins while dodging relentless Bloopers and Cheep Cheeps"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[project.scripts]
vector-super-mario-bros-underwater-treasure-hunt = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
