[project]
name = "vector-super-mario-bros-jump-and-dash-pro"
version = "0.1.0"
description = "A precision-focused platformer where dash management and jump timing determine survival"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
