[project]
name = "vector-balloon-pop-puzzle"
version = "0.1.0"
description = "Strategic physics-based puzzle where players pop colored balloons using limited darts to clear the grid"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
