[project]
name = "vector-super-mario-bros-fire-flower-sniping"
version = "0.1.0"
description = "Master the trajectory of Mario's fireballs to defeat enemies in a high-stakes sniping challenge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
